Fix: replace remaining java.net.URL with java.net.URI (#106) (#107)
Completes the migration started in #98: RobotsTxtChecker,
PolitenessManager, and MagicBlackSpider still used the deprecated
java.net.URL for host/path extraction. Replaced with java.net.URI
throughout; updated matching test assertions accordingly.

Co-authored-by: Kamil Jendzul <kamil.jendzul@gmail.com>
Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>